<resources>
    <string-array name="languages">
        <item>Auto</item>
        <item>English</item>
        <item>Bahasa Indonesia</item>
    </string-array>
    <string name="app_name" translatable="false">GitHub User</string>
    <string name="label_repositories">Repositories</string>
    <string name="label_followers">Followers</string>
    <string name="label_following">Following</string>
    <string name="dialog_title_about">About</string>
    <string name="content_desc_user_profile_picture">user profile picture</string>
    <string name="hint_search_user">Search user</string>
    <string name="label_jambi_indonesia" translatable="false">Jambi, Indonesia</string>
    <string name="content_desc_developer_profile_picture">Developer\'s profile picture</string>
    <string name="label_about_description" translatable="false">Deddy Romnan Rumapea\nromnandeddy@gmail.com</string>
    <string name="label_close">Close</string>
    <string name="label_about_me">About Me</string>
    <string name="favorite_users">Favorite users</string>
    <string name="not_found">Not found</string>
    <string name="removed_favorite">Removed from favorite users</string>
    <string name="added_favorite">Added to favorite users</string>
    <string name="label_search_instruction">Search user by using search bar above</string>
    <string name="settings">Settings</string>
    <string name="reminder_preference_title">Reminder at 9:00 AM</string>
    <string name="key_reminder" translatable="false">reminder</string>
    <string name="key_language" translatable="false">language</string>
    <string name="auto" translatable="false">Auto</string>
    <string name="language">Language</string>
    <string name="alarm_message">Let\'s find popular users on GitHub!</string>
    <string name="reminder_set_up">Reminder notification is set up</string>
    <string name="reminder_cancelled">Reminder notification is cancelled</string>
    <string name="appwidget_text" translatable="false">Fav Users</string>
    <string name="empty_text">No data</string>
    <string name="error_0">Unable to connect</string>
    <string name="error_69">We couldn\'t find any users matching \'%s\'</string>
    <string name="error_70">Error parsing data</string>
    <string name="error_71">No data</string>
    <string name="error_401" translatable="false">401 : Bad request</string>
    <string name="error_403" translatable="false">403 : Forbidden</string>
    <string name="error_404" translatable="false">404 : Not found</string>
    <string name="error_default" translatable="false">Unknown error occurred : \n%d</string>
</resources>